--- a/video-player.html
+++ b/video-player.html
@@ -1511,6 +1511,7 @@
           "9": { link:'https://drive.google.com/file/d/1J68mncT1iGJRA6hH2VVWk11sGIvAvaCC/preview', title:'To Your Eternity T3 Cap 9' },
           "10": { link:'https://drive.google.com/file/d/149LlvTrovgAQfJzmF07qGs_0vE_Yfmr7/preview', title:'To Your Eternity T3 Cap 10' },
           "11": { link:'https://drive.google.com/file/d/1vjDi3GAqMrNN9R8frqgs42tVNUInuBz0/preview', title:'To Your Eternity T3 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1WFloJQqSerLRK_sk6mlre7HSHzQ3A3mI/preview', title:'To Your Eternity T3 Cap 12' },
         }
       },
       "32": {
@@ -1628,7 +1629,7 @@
           "18": { link:'https://drive.google.com/file/d/1lgnKPlUlgYK8ft4YbZjoPpDSZXbh8w0z/preview', title:'Gachiakuta T1 Cap 18' },
           "19": { link:'https://drive.google.com/file/d/1Ce_4nCnzvhL6hnmfdGCbdVjRHoHyff9z/preview', title:'Gachiakuta T1 Cap 19' },
           "20": { link:'https://drive.google.com/file/d/1-qOrTxw-P5AidhxUYdHxyVe8tzrm7Ip0/preview', title:'Gachiakuta T1 Cap 20' },
-          "21": { link:'/preview', title:'Gachiakuta T1 Cap 21' },
+          "21": { link:'https://drive.google.com/file/d/1mZTQL9NIfph7nwjO6azHPxiqiRA2bwYr/preview', title:'Gachiakuta T1 Cap 21' },
           "22": { link:'/preview', title:'Gachiakuta T1 Cap 22' },
           "23": { link:'/preview', title:'Gachiakuta T1 Cap 23' },
           "24": { link:'/preview', title:'Gachiakuta T1 Cap 24' },
@@ -1734,6 +1735,7 @@
           "1": { link:'https://drive.google.com/file/d/16XcHfR5gJZPkhJ_6QpxOW1R71HcApwB-/preview', title:'One Punch-Man T3 Cap 1' },
           "2": { link:'https://drive.google.com/file/d/1vx-GmwAj-HgvQ0FpfSDCm-NejRHhbNIk/preview', title:'One Punch-Man T3 Cap 2' },
           "3": { link:'https://drive.google.com/file/d/1y1lrZ0db8QUNM-0IdYwVr5gYJKuo_KRS/preview', title:'One Punch-Man T3 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1yWORKhIieHho_ZIAvRH6alrP2bydgxOd/preview', title:'One Punch-Man T3 Cap 4' },
         }
       },
       "41": {
@@ -1905,6 +1907,8 @@
           "8": { link:'https://drive.google.com/file/d/1qLOBU3QJgWAidGhhXchDtZEkWtd6mBL1/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 8' },
           "9": { link:'https://drive.google.com/file/d/1Wj5IA3QpanA9OaV9MaCx8-F6S9mzdHC5/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 9' },
           "10": { link:'https://drive.google.com/file/d/1_p10aXWcOhUtz6kE2qV4xMkEcBkmHoMX/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/18Om1_898VXKGo0eo_7V2IjIaRrUjNONw/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1w9nZ_ewQ_4Dstvh3UBJ_a1Yi-83jQaRM/preview', title:'Tondemo Skill de Isekai Hourou Meshi T2 Cap 12' },
         }
       },
       "46": {
@@ -2051,7 +2055,7 @@
           "6": { link: 'https://drive.google.com/file/d/16tVbRmoixbYBZhsRAoiPp5hevpvWG_OP/preview', title:'Spy × Family T3 Cap 6' },
           "7": { link: 'https://drive.google.com/file/d/1h8UGkStGKWmxobVXbuPFnq5k-2GuXw9l/preview', title:'Spy × Family T3 Cap 7' },
           "8": { link: 'https://drive.google.com/file/d/1f5A6tZfGfDr2WRP3rNGk2Jo8fcryyf0o/preview', title:'Spy × Family T3 Cap 8' },
-          "9": { link: '/preview', title:'Spy × Family T3 Cap 9' },
+          "9": { link: 'https://drive.google.com/file/d/1fqIbSta22wtJbQJbDWQVmAizuR-D9aq4/preview', title:'Spy × Family T3 Cap 9' },
           "10": { link: '/preview', title:'Spy × Family T3 Cap 10' },
           "11": { link: '/preview', title:'Spy × Family T3 Cap 11' },
           "12": { link: '/preview', title:'Spy × Family T3 Cap 12' },
@@ -2317,6 +2321,7 @@
           "19": { link:'https://drive.google.com/file/d/1iNv6CV05PbPX1_S4aFWhiibJE9ovoP8G/preview', title:'Futari Solo Camp T1 Cap 19' },
           "20": { link:'https://drive.google.com/file/d/1sPO8g9lkY2HpCTo6Yy1tgHGiNnLtm4_2/preview', title:'Futari Solo Camp T1 Cap 20' },
           "21": { link:'https://drive.google.com/file/d/1IZL3j5tPJNVXtNyttkBgR7cQo3ZtWKaP/preview', title:'Futari Solo Camp T1 Cap 21' },
+          "22": { link:'https://drive.google.com/file/d/1vuJZgv_pDodNhymV42soAxNMrRYMVUDh/preview', title:'Futari Solo Camp T1 Cap 22' },
         }
       },
       "54": {
@@ -2330,6 +2335,7 @@
           "7": { link:'https://drive.google.com/file/d/1MXYNnpSIKUMuIr1nVgGVi-aM4Z2DA5Pz/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1cgwwaDUEhG-QBsXgK5anjCw-pb1T8lTO/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 8' },
           "9": { link:'https://drive.google.com/file/d/10jEXAorQKgqzuiksXcst8f40-GBJZe9M/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/16kHo1LyyVlPO5MlbLZ64VQaTias5lA6p/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 10' },
         }
       },
       "55": {
@@ -2342,6 +2348,7 @@
           "6": { link:'https://drive.google.com/file/d/1_gvtHRhB6n-4htLzhPvWyf_C97pHM4NU/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 6' },
           "7": { link:'https://drive.google.com/file/d/1pLLpO8OFSFH2USXg18NBEkOF009Qv-NZ/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1DScNneF7SSW6hnLSzPVnSNFEQm5gmAmw/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/158rWtg19QvAQ1qpZnQqVIsuIGVFxZmmH/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 9' },
         }
       },
       "56": {
@@ -2491,6 +2498,7 @@
           "7": { link:'https://drive.google.com/file/d/1fbWAiIbXifd_EeWCq-hdxStTNLyGqSiF/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1FPkisn_nCXnA_-bFs_D4EZJyscJSppws/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 8' },
           "9": { link:'https://drive.google.com/file/d/1zjhbUaXk46PODve5MEsFmzzsUlhoofZ_/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1WctcIvfiF1jbM7cBvWT1-2osC-dhC_Bn/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 10' },
         }
       },
       "60": {
@@ -2700,6 +2708,8 @@
           "4": { link:'https://drive.google.com/file/d/12rGFRgfgBFCNSy_Bx_BXAHRwhKv7tDzZ/preview', title:'Gnosia T1 Cap 4' },
           "5": { link:'https://drive.google.com/file/d/1181jozxcbYcYMIB7XyeUeWu9CP4un5-L/preview', title:'Gnosia T1 Cap 5' },
           "6": { link:'https://drive.google.com/file/d/1GlKCB4cpsYXqah-eeBRH7vvbXLFCueIE/preview', title:'Gnosia T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1AXFnLJD7TUnvR-zI0LqriRl9ShY7DW7y/preview', title:'Gnosia T1 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1xrHpdUq45LKrIahPCpH1n2hfYj2onYU1/preview', title:'Gnosia T1 Cap 8' },
         }
       },
       "65": {
@@ -2832,6 +2842,17 @@
         },
         "3": {
           "1": { link:'https://drive.google.com/file/d/1GOMOvEkGumhQO6pUgPw1BdhXc4lGJzE0/preview', title:'Cars Película 3' },
+        }
+      },
+      "70": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1OWitAmBd_VPhIX_kuAh2A3s2j_lgcu79/preview', title:'Kimi to Koete Koi ni Naru T1 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1SFUdZv88tkye2rGskIRESCrdIbIbAiFF/preview', title:'Kimi to Koete Koi ni Naru T1 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/19PmtQQ-1CLKhNXdKQuinJ_EotIvBwBJT/preview', title:'Kimi to Koete Koi ni Naru T1 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/13f2ZR_n9dEYszbhQhy0vtW4u7b2QOFdh/preview', title:'Kimi to Koete Koi ni Naru T1 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1bsaWH_Elnv76OPYrz3bK1JjfTHxf55Xu/preview', title:'Kimi to Koete Koi ni Naru T1 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1D2SiUqtsac8MBIGOEP-ZdUHYlBsL7uEi/preview', title:'Kimi to Koete Koi ni Naru T1 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/15QGfj-crIB9VCRqKl7yXIcI1KrHug7dp/preview', title:'Kimi to Koete Koi ni Naru T1 Cap 7' },
         }
       },
       "71": {
