--- a/anime-detail.html
+++ b/anime-detail.html
@@ -331,7 +331,9 @@
             "konosuba.mp3"
         ],
         4: [ // Re:Zero
-            "mushokutensei.mp3"
+            "「Call of the Witch」ReZero OST 15 ／『Main Soundtrack』.mp3",
+            "ReZERO - Starting Life in Another World - Ending.mp3",
+            "ReZERO -Starting Life in Another World- Season 2 - Ending Memento.mp3"
         ],
         5: [ // Mushoku Tensei
             "mushokutensei.mp3"
