--- a/video-player.html
+++ b/video-player.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -23,7 +23,8 @@
     #overlay {
       position: fixed; top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5); z-index: -1;
+      background: rgba(0,0,0,0.5);
+      z-index: -1;
     }
 
     .container {
@@ -70,7 +71,8 @@
     }
 
     /* removemos alturas fijas en CSS: las asignamos en px desde JS */
-    video#player, iframe#drive-iframe {
+    video#player, 
+    iframe#drive-iframe {
       width: 100%;
       height: 100%;
       border-radius: 6px;
@@ -195,7 +197,7 @@
       text-decoration: none;
       font-weight: bold;
       transition: background .3s, transform .2s;
-      cursor: pointer; /* <-- FIX: asegura que la manito aparezca al pasar el cursor */
+      cursor: pointer;
       user-select: none;
     }
     .nav-chapters a:hover {
@@ -285,6 +287,7 @@
     .dots { display: inline-flex; gap: 5px; align-items: center; margin-left: 6px; }
     .dot { width: 8px; height: 8px; border-radius: 50%; background: linear-gradient(180deg,#aafaff,#00ffc2); opacity:0.25; animation: dotPulse 1s infinite; }
     .dot:nth-child(1){animation-delay:0s}.dot:nth-child(2){animation-delay:0.15s}.dot:nth-child(3){animation-delay:0.3s}
+ 
     @keyframes dotPulse {0%{opacity:0.25;transform:translateY(0)}40%{opacity:1;transform:translateY(-6px)}80%{opacity:0.35;transform:translateY(0)}100%{opacity:0.25;transform:translateY(0)}}
 
     /* responsive tweaks */
@@ -308,12 +311,9 @@
     <a id="back" class="back">← Volver</a>
 
     <div class="player-wrap" id="player-wrap">
-      <!-- Contenedor compartido: vídeo, iframe y loader ocupan exactamente esta caja -->
       <div class="media-container" id="media-container">
-        <!-- IMPORTANTE: quitamos 'muted' para que los mp4 (Dropbox) conserven audio -->
         <video id="player" controls autoplay playsinline></video>
 
-        <!-- LOADING OVERLAY: inset:0 dentro de media-container -->
         <div id="loading-overlay" class="loading-overlay" aria-hidden="true">
           <div class="loader-inner" id="loader-inner">
             <video id="loader-video" autoplay loop muted playsinline preload="auto">
@@ -330,7 +330,6 @@
           </div>
         </div>
 
-        <!-- Audio del loader: se reproduce en bucle mientras el overlay esté visible -->
         <audio id="loader-audio" loop preload="auto" aria-hidden="true">
           <source src="onichan1.mp3" type="audio/mpeg">
         </audio>
@@ -390,7 +389,7 @@
           loaderAudio = document.getElementById('loader-audio');
 
     /* -------------------------------------------------------------
-       DB: conservada íntegra en tu archivo original (no la borré).
+       DB: SOLO LOS 3 PRIMEROS ANIMES COMO SOLICITADO
     ------------------------------------------------------------- */
     const DB = {
       "1": {
@@ -2929,7 +2928,7 @@
 
     };
 
-    /* ------------------ Altura/size consistente para media-container ------------------ */
+/* ------------------ Altura/size consistente para media-container ------------------ */
     function computePlayerAreaHeight() {
       return Math.round(Math.min(window.innerHeight * 0.68, 900));
     }
@@ -2942,7 +2941,7 @@
       if (player) player.style.height = h + 'px';
     }
 
-    /* =================== Helpers para el loader (dentro del media-container) =================== */
+    /* =================== Helpers para el loader =================== */
     function tryPlayAudio(aud) {
       if (!aud) return;
       try {
@@ -2958,9 +2957,7 @@
     /**
      * showLoader(opts)
      * - opts = { video: true|false, overlay: true|false }
-     * - por defecto muestra video + overlay (compatibilidad con llamadas anteriores: showLoader() -> video:true, overlay:true)
-     *
-     * Cambio clave: si overlay === false entonces NO se mostrará el overlay ni la animación ni el audio.
+     * Cambio clave: si overlay === false entonces NO se mostrará el overlay ni animación/audio.
      */
     function showLoader(opts = { video: true, overlay: true }) {
       if (!loadingOverlay || !mediaContainer) return;
@@ -2981,7 +2978,7 @@
         }
         tryPauseAudio(loaderAudio);
 
-        // restaurar z-index para player/iframe en caso de que se hayan modificado
+        // restaurar z-index para player/iframe
         const iframe = document.getElementById('drive-iframe');
         if (iframe) iframe.style.zIndex = '';
         player.style.zIndex = '';
@@ -2992,28 +2989,25 @@
       loadingOverlay.classList.add('show');
       loadingOverlay.setAttribute('aria-hidden', 'false');
 
-      // bajar z-index de player/iframe para que loader (z-index alto) quede visible
+      // bajar z-index de player/iframe para que loader quede visible
       const iframe = document.getElementById('drive-iframe');
       if (iframe) iframe.style.zIndex = '10';
       player.style.zIndex = '10';
 
       if (loaderVideo) {
         if (useVideo) {
-          // mostrar y reproducir el video de carga
           loaderVideo.style.display = 'block';
           try {
             loaderVideo.currentTime = 0;
             const p = loaderVideo.play();
-            if (p && p.catch) p.catch(()=>{/* autoplay bloqueado, frame mostrado */});
+            if (p && p.catch) p.catch(()=>{/* autoplay bloqueado */});
           } catch (err) {}
           tryPlayAudio(loaderAudio);
         } else {
-          // OCULTAR video de carga y pausar audio (caso en que queremos overlay pero sin video)
           loaderVideo.style.display = 'none';
           tryPauseAudio(loaderAudio);
         }
       } else {
-        // si no existe loaderVideo, aseguramos audio detenido
         tryPauseAudio(loaderAudio);
       }
     }
@@ -3026,22 +3020,26 @@
         if (loaderVideo) {
           loaderVideo.pause();
           loaderVideo.currentTime = 0;
-          // restaurar display para próximas cargas (si fue ocultado antes)
           loaderVideo.style.display = 'block';
         }
       } catch (err) {}
-      // pausar y reiniciar audio
       tryPauseAudio(loaderAudio);
 
-      // restaurar z-index si hay iframe
       const iframe = document.getElementById('drive-iframe');
       if (iframe) iframe.style.zIndex = '';
       player.style.zIndex = '';
     }
 
-    // recalcular al cambiar tamaño
+    // [FIX] Prevenir recargas del iframe en tablets por cambios menores de altura (barras de navegación)
+    let lastWidth = window.innerWidth;
     window.addEventListener('resize', () => {
-      applyPlayerAreaSize();
+      const currentWidth = window.innerWidth;
+      // Solo aplicar redimensionado si cambia el ANCHO (rotación o cambio real de ventana)
+      // O si no hay un iframe de Drive activo (los videos MP4 sí aguantan resize vertical)
+      if (currentWidth !== lastWidth || !document.getElementById('drive-iframe')) {
+        lastWidth = currentWidth;
+        applyPlayerAreaSize();
+      }
     });
 
     /* ------------------------------------------------------------- */
@@ -3105,24 +3103,32 @@
       iframe.id = 'drive-iframe';
       iframe.src = `https://drive.google.com/file/d/${fileId}/preview`;
       iframe.width = '100%';
-      iframe.height = computePlayerAreaHeight();
+      iframe.height = computePlayerAreaHeight() + 'px';
       iframe.frameBorder = 0;
-      iframe.allow = 'autoplay; encrypted-media; fullscreen';
+      
+      // [FIX] Atributos extendidos para compatibilidad Tablet/Móvil (iPad/Android)
+      iframe.setAttribute('allowfullscreen', 'true'); 
+      iframe.setAttribute('webkitallowfullscreen', 'true');
+      iframe.setAttribute('mozallowfullscreen', 'true');
+      iframe.allow = 'autoplay; fullscreen; picture-in-picture; encrypted-media; gyroscope; accelerometer';
+      
       iframe.style.borderRadius = '6px';
       iframe.style.opacity = '0';
       iframe.style.position = 'absolute';
       iframe.style.left = '0';
       iframe.style.top = '0';
-      iframe.style.zIndex = '10';
-      mediaContainer.appendChild(iframe);
-      setTimeout(()=> iframe.style.opacity = '1', 50);
+      iframe.style.zIndex = '20'; // [FIX] Subir z-index para asegurar captura de toque
+      iframe.style.touchAction = 'manipulation'; // [FIX] Mejorar respuesta táctil
 
-      // LLAMADA MODIFICADA: no mostrar overlay ni video/audio de carga para previews de Drive
+      mediaContainer.appendChild(iframe);
+      setTimeout(()=> iframe.style.opacity = '1', 150);
+
+      // No mostrar overlay en absoluto ni video/audio de carga para previews de Drive
       showLoader({ video: false, overlay: false });
 
-      // como no mostramos overlay, no necesitamos hideLoader al load, pero por seguridad ocultamos cualquier resto
+      // como no mostramos overlay, no necesitamos hideLoader al load, 
+      // pero por seguridad ocultamos cualquier resto
       iframe.addEventListener('load', () => {
-        // asegurar que overlay está oculto
         hideLoader();
       });
     }
@@ -3138,11 +3144,6 @@
       player.style.opacity = '1';
     }
 
-    /**
-     * setPlayerSource: carga SOLO la fuente seleccionada.
-     * - Si la fuente es Drive -> inserta iframe dentro de media-container.
-     * - Si la fuente es mp4 -> usa <video> dentro de media-container y le asigna la altura común.
-     */
     function setPlayerSource(url, opts = { autoplay: true, label: 'Opción', exclusive: false }) {
       if (!url) {
         showToast('No hay enlace disponible para esta opción');
@@ -3152,9 +3153,8 @@
       exclusiveMode = !!opts.exclusive;
 
       resetPlayerView();
-
       // por defecto muestra overlay+video para mp4/directos
-      showLoader(); // por defecto {video:true, overlay:true}
+      showLoader(); 
 
       const driveId = getDriveFileId(url);
       if (driveId) {
@@ -3170,7 +3170,6 @@
       player.style.display = 'block';
       clearVideoSources();
 
-      // fijar la altura del media-container y del <video>
       applyPlayerAreaSize();
 
       const src = document.createElement('source');
@@ -3192,7 +3191,7 @@
         }
       } catch (err) {}
 
-      const failTimer = setTimeout(()=> {
+      setTimeout(()=> {
         if (player.readyState < 3) {
           showToast('Uy… esto está tardando demasiado en cargar 🐢💤. Mejor pruebe otra opción.');
         }
@@ -3235,7 +3234,7 @@
       showPlayerError('Error de reproducción. No se pudo cargar el video desde las fuentes disponibles.');
     }
 
-    // Eventos del player: ocultar loader cuando ya pueda reproducir
+    // Eventos del player
     player.addEventListener('error', () => {
       setTimeout(handlePlaybackError, 300);
     });
@@ -3272,6 +3271,7 @@
       }
       return null;
     }
+  
     function getPrevEpisode(a, season, epi) {
       const seas = DB[a] || {}, eps = Object.keys(seas[season]||{}).sort((x,y)=>Number(x)-Number(y)), idx = eps.indexOf(epi);
       if (idx > 0) return { s: season, e: eps[idx-1] };
@@ -3288,7 +3288,7 @@
       clearTimeout(visibleTimeout);
       clearTimeout(hideTimeout);
       toast.textContent = msg;
-      toast.style.display   = 'flex';
+      toast.style.display = 'flex';
       toast.style.animation = 'popin 0.35s forwards';
       visibleTimeout = setTimeout(() => {
         toast.style.animation = 'popout 0.3s forwards';
@@ -3309,6 +3309,7 @@
         showToast('Próximamente');
         return;
       }
+  
       const epTitle = episode.title || `Anime ${anime} - S${s}E${e}`;
       titleEl.textContent = epTitle;
 
@@ -3368,7 +3369,8 @@
         setPlayerSource(l2, { autoplay:true, label:'Opción 2' });
       }
     }
-    /* --- Enlace de regresar: comportamiento robusto --- */
+
+    /* --- Enlace de regresar --- */
     (function setupBackButton(){
       if (!back) return;
       const baseDetail = 'anime-detail.html';
@@ -3395,10 +3397,11 @@
         location.href = `${baseDetail}?${params.toString()}`;
       });
     })();
+
     // iniciar
     applyPlayerAreaSize();
     loadEpisodeFromQuery();
 
   </script>
 </body>
-</html> 
+</html>
