--- a/video-player.html
+++ b/video-player.html
@@ -2686,8 +2686,8 @@
         loadVideo(epData.link || epData.link2);
 
         // Generar botones de servidores
-        if(epData.link) createOptionBtn("Opción 1 (Drive)", epData.link, true);
-        if(epData.link2) createOptionBtn("Opción 2 (Nativo)", epData.link2, false);
+        if(epData.link) createOptionBtn("Opción 1", epData.link, true);
+        if(epData.link2) createOptionBtn("Opción 2", epData.link2, false);
 
         // --- LÓGICA DE DESCARGA DIRECTA ---
         updateDownloadButton(epData.link || epData.link2);
