--- a/video-player.html
+++ b/video-player.html
@@ -156,29 +156,61 @@
     }
     .btn-hidden { display: none; }
     
-    /* OPCIONES DE SERVIDOR */
-    .options { margin-top: 20px; display: flex; gap: 10px; justify-content: center; flex-wrap: wrap; }
-    .opt-btn { 
-        font-size: 0.9rem; padding: 8px 16px; border: 1px solid #555; 
-        background: rgba(0,0,0,0.6); color: #ccc; 
-        cursor: pointer; border-radius: 6px;
-        transition: 0.3s;
+/* Opciones de Servidor */
+    .options { 
+        margin-top: 25px; 
+        display: flex; 
+        gap: 15px;
+        justify-content: center; 
+        flex-wrap: wrap; 
     }
-    .opt-btn:hover { background: rgba(255,255,255,0.1); color: white; }
+    .opt-btn { 
+        font-size: 0.9rem; 
+        padding: 10px 20px; 
+        border: 1px solid #444; 
+        background: #1a1a1a; 
+        color: #aaa; 
+        cursor: pointer; 
+        border-radius: 8px;
+        transition: all 0.3s;
+        font-family: 'Poppins', sans-serif;
+    }
+    .opt-btn:hover {
+        background: #333;
+        color: #fff;
+    }
     .opt-btn.active { 
         border-color: var(--primary-color); 
-        color: #fff; 
-        background: rgba(0, 255, 255, 0.2); 
+        color: #000; 
+        background: var(--primary-color); 
+        font-weight: bold;
+        box-shadow: 0 0 15px rgba(0, 255, 247, 0.4);
     }
 
-    /* COMENTARIOS */
-    .comments-section { margin-top: 50px; border-top: 1px solid rgba(255,255,255,0.2); padding-top: 20px; }
-    .comments-placeholder { color: #aaa; text-align: center; font-style: italic; }
+    /* Comentarios */
+    .comments-section { 
+        margin-top: 60px; 
+        border-top: 1px solid rgba(255,255,255,0.1); 
+        padding-top: 30px; 
+    }
+    .comments-section h3 {
+        color: var(--primary-color);
+        margin-bottom: 20px;
+    }
+    .comments-placeholder { 
+        color: #888;
+        text-align: center; 
+        font-style: italic; 
+        padding: 20px;
+        background: rgba(0,0,0,0.3);
+        border-radius: 10px;
+    }
 
-    /* RESPONSIVE */
+    /* Responsive */
     @media (max-width: 768px) {
         .container { margin: 10px; padding: 15px; }
-        h1 { font-size: 1.2rem; }
+        h1 { font-size: 1.1rem; }
+        .btn { padding: 10px 20px; font-size: 0.85rem; }
     }
   </style>
 </head>
