--- a/video-player.html
+++ b/video-player.html
@@ -287,7 +287,7 @@
             <script src="https://utteranc.es/client.js"
                 repo="Archinime/Comentarios"
                 issue-term="url"
-                theme="blue-dark"
+                theme="icy-dark"
                 crossorigin="anonymous"
                 async>
             </script>
