--- a/anime-detail.html
+++ b/anime-detail.html
@@ -33,8 +33,12 @@
       width: 100%; height: 100%;
       object-fit: cover;
       z-index: -10; /* Muy atrás */
-      background: #000; /* Fondo negro por si el video tarda en cargar */
-      /* No usamos opacity: 0 aquí para asegurar que se vea */
+      z-index: -1;
+      background: url('galaxia-morado1.avif') center/cover no-repeat,
+                  linear-gradient(180deg, rgba(0,0,0,0.25), rgba(0,0,0,0.6));
+      opacity: 1; 
+      transition: opacity 0.8s ease;
+      pointer-events: none;
     }
     
     /* Overlay (Capa oscura sobre el video para que el texto resalte) */
