--- a/anime-detail.html
+++ b/anime-detail.html
@@ -4334,6 +4334,13 @@ let currentAudio = null;
         t.style.display='block'; setTimeout(()=>t.style.display='none',2000);
     });
 
+    function showToast(msg) {
+        const t = document.getElementById('toast');
+        t.textContent = "✅ " + msg;
+        t.style.display = 'block';
+        setTimeout(() => t.style.display = 'none', 2000);
+    }
+
     // Lógica de recomendaciones
     function renderRecommendations(currentId) {
         const grid = document.getElementById('rec-grid');
