--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -453,6 +453,8 @@ const firebaseConfig = {
 const ALLOWED_USERS = ["archinime12@gmail.com"];
 
 firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+let currentUserToken = null;
 
 
 
