--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -970,8 +970,8 @@ async function subirAGithHub() {
     // --- PROCESO DE SUBIDA (SIMULADO / REAL CON TOKEN) ---
     // Usaremos las funciones helper getGithubFile y updateGithubFile
     
-    const REPO_OWNER = "TuUsuario"; // CAMBIAR ESTO
-    const REPO_NAME = "TuRepo";     // CAMBIAR ESTO
+    const REPO_OWNER = "Archinime"; 
+    const REPO_NAME = "-Archinime-";
 
     log("Iniciando subida...");
     
