--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -111,6 +111,7 @@
                     <option value="Shōjo">Shōjo</option>
                     <option value="Josei">Josei</option>
                     <option value="Kodomo">Kodomo</option>
+                    <option value="Seijin">Seijin</option>
                 </select>
             </div>
             <div class="col-flex">
