--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -115,13 +115,8 @@
                 </select>
             </div>
             <div class="col-flex">
-                <label>Valoración <span>*</span></label>
-                <select id="ratingAnime" onchange="requestPreviewUpdate()">
-                    <option value="" disabled selected>Elegir Valoración...</option>
-                    <option value="excellent">⭐ Excelente (4.8+)</option>
-                    <option value="good">⭐ Buena (4.6+)</option>
-                    <option value="regular">⭐ Regular (-4.5)</option>
-                </select>
+                <label>Valoración (1.0 - 5.0) <span>*</span></label>
+                <input type="number" id="ratingAnime" step="0.1" min="1.0" max="5.0" placeholder="Ej: 4.5" oninput="requestPreviewUpdate()" onblur="validate(this)">
             </div>
         </div>
 
