--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -96,7 +96,7 @@
         
         <div class="search-tabs">
             <button id="tabMine" class="search-tab-btn active" onclick="setSearchMode('mine')">
-                <i class="fas fa-user"></i> Mis Animes
+                <i class="fas fa-user"></i> Mis Aportes
             </button>
             <button id="tabAll" class="search-tab-btn" onclick="setSearchMode('all')">
                 <i class="fas fa-globe"></i> General
