--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -21,6 +21,7 @@
             padding: 0 15px 10px 15px;
             border-bottom: 1px solid #333;
             background: #131419;
+            margin-top: 20px; /* ESPACIO AÑADIDO AQUI */
         }
         .search-tab-btn {
             flex: 1;
