--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -37,7 +37,7 @@
         <img id="userAvatarImg" src="" style="width:36px; height:36px; border-radius:50%; border:2px solid var(--primary);">
         <div>
             <div class="user-badge">Verificado</div>
-            <div id="userNameDisplay" class="user-name">Archinime</div>
+            <div id="userNameDisplay" class="user-name">Usuario</div>
         </div>
     </div>
     <div style="display:flex; gap:10px;">
@@ -53,7 +53,7 @@
 <div id="searchModal" onclick="handleModalClick(event)">
     <div class="search-box">
         <div style="padding:15px; border-bottom:1px solid #333; display:flex; justify-content:space-between; align-items:center;">
-            <h3 style="margin:0; color:#fff;">📂 Seleccionar Anime</h3>
+            <h3 style="margin:0; color:#fff;">📂 Seleccionar Mis Animes</h3>
             <button onclick="closeSearchModal()" style="background:none; border:none; color:#ff4757; font-size:1.2em; cursor:pointer;"><i class="fas fa-times"></i></button>
         </div>
         <div style="padding:10px;">
