--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -13,6 +13,32 @@
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Estilos específicos para el Modal de Registro de Usuario Nuevo */
+        #setupUserModal {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            z-index: 10000;
+            display: none; /* Oculto por defecto */
+            flex-direction: column; justify-content: center; align-items: center;
+            background: rgba(0,0,0,0.95);
+            backdrop-filter: blur(10px);
+        }
+        .setup-card {
+            background: #0f1014;
+            padding: 40px;
+            border-radius: 24px; border: 1px solid var(--primary);
+            width: 100%; max-width: 450px;
+            text-align: center;
+            box-shadow: 0 0 50px rgba(140, 82, 255, 0.2);
+        }
+        .setup-input {
+            width: 100%;
+            padding: 12px; margin-top: 10px;
+            background: #181920; border: 1px solid #333;
+            color: white; border-radius: 8px;
+        }
+    </style>
 </head>
 <body>
 
@@ -29,6 +55,26 @@
         <div id="loginError" style="color: #ff4757; margin-top: 20px; display: none; background: rgba(255, 71, 87, 0.1); padding: 10px; border-radius: 8px; font-size: 0.9em;">
             <i class="fas fa-ban"></i> <span id="errorText">Acceso Denegado</span>
         </div>
+    </div>
+</div>
+
+<div id="setupUserModal">
+    <div class="setup-card">
+        <h2 style="color:var(--primary); margin-bottom:10px;">¡Bienvenido Aportador!</h2>
+        <p style="color:#ccc; font-size:0.9em; margin-bottom:20px;">Es tu primera vez aquí. Configura tu perfil de uploader.</p>
+        
+        <label style="text-align:left; display:block; color:#aaa; font-size:0.8em;">Tu Nickname (Nombre visible)</label>
+        <input type="text" id="newNick" class="setup-input" placeholder="Ej: OtakuMaster">
+
+        <label style="text-align:left; display:block; color:#aaa; font-size:0.8em; margin-top:15px;">Avatar (Nombre de archivo .avif / .jpg)</label>
+        <input type="text" id="newAvatar" class="setup-input" placeholder="Ej: Logo_Archinime.avif" value="Logo_Archinime.avif">
+        
+        <label style="text-align:left; display:block; color:#aaa; font-size:0.8em; margin-top:15px;">Red Social (Opcional)</label>
+        <input type="text" id="newSocial" class="setup-input" placeholder="https://youtube.com/...">
+
+        <button class="btn btn-gen" onclick="saveNewUserProfile()" id="btnSaveProfile">
+            GUARDAR Y ENTRAR
+        </button>
     </div>
 </div>
 
