--- a/Archinime CMS - Creador.html
+++ b/Archinime CMS - Creador.html
@@ -21,7 +21,8 @@
             top: 0; left: 0; width: 100%; height: 100%;
             background: #000;
             z-index: 10000; /* Por encima de todo */
-            display: none; /* Se activa con JS */
+            display: none;
+            /* Se activa con JS */
             flex-direction: column;
             justify-content: center; align-items: center;
             padding: 20px;
@@ -56,7 +57,8 @@
             margin-bottom: 5px;
         }
         .profile-preview-img {
-            width: 80px; height: 80px;
+            width: 80px;
+            height: 80px;
             border-radius: 50%;
             object-fit: cover;
             border: 2px solid #00f0ff;
@@ -176,7 +178,9 @@
         </button>
 
         <label style="margin-top:25px">URL Portada Vertical (.AVIF) <span>*</span></label>
-        <div style="margin-bottom:5px; font-size:0.8em; color:var(--accent);">Permitido: 1000x1500, 2000x3000, 3412x5120</div>
+        <div style="margin-bottom:5px; font-size:0.8em; color:var(--accent);">
+            Permitido: 1000x1500, 1400x2100, 2000x3000, 2090x3135, 3412x5120
+        </div>
         <div style="display:flex; gap:15px; align-items: flex-start; flex-wrap: wrap;">
             <div style="flex:1; min-width: 200px;">
                 <input type="text" id="portadaAnime" placeholder="https://..." oninput="checkCoverVisual(this); requestPreviewUpdate()" onblur="validate(this); smartLinkConvert(this)">
@@ -189,7 +193,7 @@
         <div class="genres-box" id="genresContainer"></div>
 
         <label>Sinopsis <span>*</span></label>
-        <textarea id="sinopsisAnime" rows="5" placeholder="Sinopsis oficial..." onblur="autoCap(this); validate(this)"></textarea>
+        <textarea id="sinopsisAnime" rows="5" placeholder="Sinopsis oficial..." onblur="autoCap(this); validate(this)" oninput="requestPreviewUpdate()"></textarea>
         
         <div class="row-flex">
             <div class="col-flex">
